--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "bootstrap": "^4.6.2",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.25.3",
+    "express": "^4.18.2",
+    "nodemailer": "^6.9.8",
     "nuxt": "^2.15.8",
+    "validator": "^13.11.0",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.10"
+    "vue-template-compiler": "^2.7.10",
+    "xss-filters": "^1.2.7"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.8",
