--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "ESNext.AsyncIterable",
       "DOM"
     ],
+    "resolveJsonModule": true,
     "esModuleInterop": true,
     "allowJs": true,
     "sourceMap": true,
@@ -32,5 +33,5 @@
     "node_modules",
     ".nuxt",
     "dist"
-  ]
+  ],
 }
